2009-12-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Performed task #5852: Move database fields to a FlexForm configuration
	* Localized filesize units
	* Fixed bug #1019: Integrate EXT:rgfolderselector

2008-08-05  Moreno Feltscher  <moreno@luagsh.ch>

	* Fixed bug #1218: No DBAL compatibility

2008-08-04  Moreno Feltscher  <moreno@luagsh.ch>

	* Fixed bug #1080: Code cleanup (TYPO3 CGL)

2008-07-23  Moreno Feltscher  <moreno@luagsh.ch>

	* Fixed Bug #1082: Some characters (umlauts) aren't dislayed properly in locallang.xml

2008-07-17  Moreno Feltscher  <moreno@luagsh.ch>

	* Initial commit to Forge-SVN

2006-04-26  Moreno Feltscher  <moreno@luagsh.ch>

	* Initial release